# awrts

./: .gitignore  CMakeLists.txt  Config.mk  Rules.mk
awgame/: CMakeLists.txt
awgame/console/: command_interpreter.c++  test.cpp
awrts/: CMakeLists.txt  exe.c++  main.c++  map.c++  map_loader.c++
awrts/include/awrts/: component.h  entity.h  entity_list.h  logging.h  main.h  map_loader.h  version.h
awrts/include/awrts/components/: position.h
awrts/include/awrts/graphics/: video_manager.h
awrts/include/awrts/map/: map.h
awrts/include/awrts/players/: player.h
awrts/include/awrts/units/: unit.h  unit_factory.h  unit_table.h  unit_type.h
awrts/players/: player.c++
awrts/units/: unit_factory.c++  unit_table.c++
data/: units.aw
docs/: development_plan  roadmap.md
graphics/: CMakeLists.txt  model_loader.c++  rts_camera.c++  video_manager.c++
graphics/irr/: CSceneNodeAnimatorCameraRTS.c++  logger.h  rts_camera.c++
include/awrts/: component.h  logging.h  map_loader.h  version.h
old/awrts/: CDebris.h  CGame.cpp  CGame.h  CMapManager.cpp  CMapManager.h  Commands.h  Makefile  Physics.h  awrts.h  awrts.vcxproj  awrts.vcxproj.filters
old/game/: EventManager.h
old/graphics/: EntityNode.h  Node.h  RenderingDevice.cpp  RenderingDevice.h  VideoManager.cpp  VideoManager.h
old/physics-bt/: DebugDrawer.cpp  DebugDrawer.h  PhysicsWorld.h  RigidBody.h
source/awrts/: Makefile  logging.c++  logging.cpp  main.c++  main.cpp  map_loader.c++
source/graphics/: Makefile  model_loader.c++  video_manager.c++
source/gui/: Canvas.cpp  Drawer.cpp  Element.cpp  (+3 more)
(+81 files in other folders)
